--- a/templates/views/about.hbs
+++ b/templates/views/about.hbs
@@ -9,6 +9,7 @@
     <body>
         <div class="main-content">
             {{> header}}
+            <p>This site was built by Arshi Arya. It combines location data from nominatim.openstreetmap.org with real-time weather data from weatherstack.com to deliver accurate, location-based weather information.</p>
             <img class="portrait" src="\img\me.png.jpeg">
             <p>About page content goes here.</p>
         </div>
