--- a/templates/views/help.hbs
+++ b/templates/views/help.hbs
@@ -5,7 +5,8 @@
     <title>Help</title>
     <link rel="icon" href="\img\weather.png" type="image/png">
     <link rel="stylesheet" type="text/css" href="\css\styles.css">
-    {{!-- <script src="\js\main.js"></script> --}}
+    {{!--
+    <script src="\js\main.js"></script> --}}
 
 </head>
 
@@ -13,6 +14,12 @@
     <div class="main-content">
         {{> header}}
         <p>{{message}}</p>
+        <p>
+            To check the weather, go to the home page and enter a location in the search bar, then press "Search".<br>
+            If no location is entered, you’ll be prompted to provide one.<br>
+            The app fetches real-time weather data including temperature, humidity, wind speed, and weather conditions.
+        </p>
+
     </div>
     {{> footer}}
 </body>
