--- a/templates/views/about.hbs
+++ b/templates/views/about.hbs
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>About </title>
+        <title>About</title>
         <link rel="icon" href="\img\weather.png" type="image/png">
         <link rel="stylesheet" type="text/css" href="\css\styles.css">
         {{!-- <script src="\js\main.js"></script> --}}
@@ -9,10 +9,15 @@
     <body>
         <div class="main-content">
             {{> header}}
-            <p>This site was built by Arshi Arya. It combines location data from nominatim.openstreetmap.org with real-time weather data from weatherstack.com to deliver accurate, location-based weather information.</p>
-            <img class="portrait" src="\img\me.png.jpeg">
-            <p>About page content goes here.</p>
-        </div>
+            <div class="about-content">
+                <img class="portrait" src="\img\me.png.jpg">
+                <div class="about-text">
+                    
+                    <p>This application provides real-time weather information based on any location entered by the user.</p>
+                    <p>Developed by Arshi Arya, it integrates data from the <a href="https://weatherstack.com/" target="_blank">WeatherStack API</a> for current weather updates and <a href="https://nominatim.openstreetmap.org/" target="_blank">OpenStreetMap (Nominatim)</a> for geolocation services.</p>
+                    <p>It is designed using Node.js, Express, and Handlebars (HBS), with a clean and responsive UI.</p>
+                </div>
+            </div>
         {{> footer}}
     </body>
 </html>
