--- a/templates/views/about.hbs
+++ b/templates/views/about.hbs
@@ -4,6 +4,7 @@
         <title>About</title>
         <link rel="icon" href="\img\weather.png" type="image/png">
         <link rel="stylesheet" type="text/css" href="\css\styles.css">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
         {{!-- <script src="\js\main.js"></script> --}}
     </head>
     <body>
@@ -12,7 +13,6 @@
             <div class="about-content">
                 <img class="portrait" src="\img\me.png.jpg">
                 <div class="about-text">
-                    
                     <p>This application provides real-time weather information based on any location entered by the user.</p>
                     <p>Developed by Arshi Arya, it integrates data from the <a href="https://weatherstack.com/" target="_blank">WeatherStack API</a> for current weather updates and <a href="https://nominatim.openstreetmap.org/" target="_blank">OpenStreetMap (Nominatim)</a> for geolocation services.</p>
                     <p>It is designed using Node.js, Express, and Handlebars (HBS), with a clean and responsive UI.</p>
